fix: enterprise overview: text wrapping in overview tables: second column

--- a/src/app/core/enterpriseprofile/enterprise-overview/enterprise-overview.component.scss
+++ b/src/app/core/enterpriseprofile/enterprise-overview/enterprise-overview.component.scss
@@ -16,16 +16,28 @@
 }
 
 
-/deep/ td:first-child {
+/deep/ td:nth-child(1) {
 
-  width: 500px !important;
+  max-width: 400px !important;
   //overflow: auto;
   word-wrap: break-word !important;
   .textVal {
     word-wrap: break-word !important;
-    max-width: 430px !important;
+    max-width: 400px !important;
   }
 }
+
+/deep/ td:nth-child(2) {
+
+    max-width: 400px !important;
+    //
+    //overflow: auto;
+    word-wrap: break-word !important;
+    .textVal {
+      word-wrap: break-word !important;
+      max-width: 400px !important;
+    }
+  }
 
 .basic-info-form {
   label {
